use lato for "serif" as well

--- a/_sass/settings/_uswds-theme-typography.scss
+++ b/_sass/settings/_uswds-theme-typography.scss
@@ -174,7 +174,7 @@ $theme-font-type-mono:  'roboto-mono';
 $theme-font-type-sans:  'lato';
 
 // serif
-$theme-font-type-serif: 'merriweather';
+$theme-font-type-serif: 'lato';
 
 /*
 ----------------------------------------
