--- a/_layouts/project-single.html
+++ b/_layouts/project-single.html
@@ -39,7 +39,7 @@ class: page-project-single
     <a class="usa-button" href="{{ page.abstract | prepend: site.baseurl }}">View Abstract</a>
   {% endif %}
   {% if page.academic-pub %}
-  <a class="usa-button" href="{{ page.academic-pub | prepend: site.baseurl }}">View Academic Publication</a>
+  <a class="usa-button" href="{{ page.academic-pub | prepend: site.baseurl }}">View Publication</a>
 {% endif %}
   </div>
 </div>
